--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,4 @@
 xml2markdown_30/00B32824B26ABA2D4825809F0021C41D.xml.files/$file/年度培训计划及预算表.docx
 xml2markdown_30/00B32824B26ABA2D4825809F0021C41D.xml.files/$file/经研院教育培训管理细则（修订）.pdf
 xml2markdown_30/00B32824B26ABA2D4825809F0021C41D.xml
+.idea/workspace.xml
