--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,7 @@ xml2markdown_30/00B32824B26ABA2D4825809F0021C41D.xml.files/$file/年度培训计
 xml2markdown_30/00B32824B26ABA2D4825809F0021C41D.xml.files/$file/经研院教育培训管理细则（修订）.pdf
 xml2markdown_30/00B32824B26ABA2D4825809F0021C41D.xml
 .idea/workspace.xml
+
+.idea/misc.xml
+
+.idea/practice.iml
