尝试xml转为dict后进行处理

--- a/.gitignore
+++ b/.gitignore
@@ -12,3 +12,11 @@ xml2markdown_30/00B32824B26ABA2D4825809F0021C41D.xml
 .idea/misc.xml
 
 xml2markdown_30/test.md
+
+xml2markdown_30/261DF9A44B7E8B7648258099001D49BD.xml
+
+.idea/workspace.xml
+
+.idea/practice.iml
+
+.idea/misc.xml
