函数化，实现遍历xml生成md

--- a/.gitignore
+++ b/.gitignore
@@ -20,3 +20,15 @@ xml2markdown_30/261DF9A44B7E8B7648258099001D49BD.xml
 .idea/practice.iml
 
 .idea/misc.xml
+
+xml2markdown_30/xml/00B32824B26ABA2D4825809F0021C41D.xml.files/$file/年度培训计划及预算表.docx
+
+xml2markdown_30/xml/00B32824B26ABA2D4825809F0021C41D.xml.files/$file/经研院教育培训管理细则（修订）.pdf
+
+xml2markdown_30/md/00B32824B26ABA2D4825809F0021C41D.md
+
+xml2markdown_30/md/261DF9A44B7E8B7648258099001D49BD.md
+
+xml2markdown_30/xml/00B32824B26ABA2D4825809F0021C41D.xml
+
+xml2markdown_30/xml/261DF9A44B7E8B7648258099001D49BD.xml
